@@ -1,3 +1,8 @@
+2001-01-24  Jason Leach  <jasonleach@usa.net>
+
+	* Makefile.am (INCLUDES): Forgot a trailing backslash so
+	GNOMECC_CFLAGS wasn't actually being used.  It is now.
+
 2001-01-24  Bradford Hovinen  <hovinen@ximian.com>
 
 	* Makefile.am (INCLUDES): Cleaned out kruft and replaced it with
